# toolwindowmanager

./: .gitignore  .travis.yml  CMakeLists.txt
example/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ToolWindowManager.pro  main.cpp
src/: CMakeLists.txt  ToolWindowManager.cpp  ToolWindowManager.h  ToolWindowManagerArea.cpp  ToolWindowManagerArea.h  ToolWindowManagerTabBar.cpp  ToolWindowManagerTabBar.h  ToolWindowManagerWrapper.cpp  ToolWindowManagerWrapper.h
